# gompei25

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.prod.yml  docker-compose.yml  dump.rdb
.github/: pull_request_template.md
.github/workflows/: docker-release.yml  docker.yml  release.yml
migrations/: 2021112301_add_is_done.sql  20211123_create_verification.sql
src/: errors.rs  hooks.rs  main.rs
src/commands/: fun.rs  leveling.rs  meta.rs  mod.rs  staff.rs
src/util/: data.rs  leveling.rs  mod.rs
