[package]
name = "gompei25"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"

dotenv = "0.15"

log = "0.4"

tracing = "0.1"
tracing-subscriber = "0.2"

chrono = "0.4"

[dependencies.tokio]
version = "1"
features = [
	"macros",
	"signal",
	"rt-multi-thread"
]

[dependencies.redis]
version = "0.21"
features = ["aio", "tokio-comp", "connection-manager"]
