[package]
name = "gompei25"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"

log = "0.4"

tracing = "0.1"
tracing-subscriber = "0.2"

chrono = "0.4"

derive_more = "0.99"

reqwest = "0.11"

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
	"rustls_backend",
	"cache",
	"client",
	"framework",
	"gateway",
	"model",
	"standard_framework",
	"utils",
]

[dependencies.tokio]
version = "1"
features = [
	"macros",
	"signal",
	"rt-multi-thread"
]

[dependencies.redis]
version = "0.21"
features = ["aio", "tokio-comp", "connection-manager"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.5"
features = ["postgres", "macros", "migrate", "runtime-tokio-native-tls"]

